[package]
name = "climate_token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "climate_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
# climate_reviewer = { path = "../climate_reviewer", features = ["cpi"]}
